[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/encounter_ui.gd" id="1"]

[node name="EncounterUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="PanelContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="Message" type="Label" parent="HBox/LeftPanel"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
text = "A wild monster appeared!"
vertical_alignment = 0
autowrap_mode = 2

[node name="EnemySprite" type="TextureRect" parent="HBox/LeftPanel"]
layout_mode = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -80.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
stretch_mode = 5

[node name="RightPanel" type="PanelContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBox/RightPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="HBox/RightPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="HBox/RightPanel/MarginContainer/VBox"]
layout_mode = 2
text = "Your Party:"
horizontal_alignment = 1

[node name="PartyList" type="VBoxContainer" parent="HBox/RightPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HintLabel" type="Label" parent="HBox/RightPanel/MarginContainer/VBox"]
layout_mode = 2
text = "Confirm = Select  |  Cancel = Run"
horizontal_alignment = 1
